tests/ui/pattern/suggest-adding-appropriate-missing-pattern-excluding-comments.stderr
error[E0004]: non-exhaustive patterns: `None` not covered
  --> $DIR/suggest-adding-appropriate-missing-pattern-excluding-comments.rs:4:11
   |
LL |     match Some(1) {
   |           ^^^^^^^ pattern `None` not covered
   |
note: `Option<i32>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Option<i32>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Some(_) => {},
LL +         None => todo!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
